[package]
name = "almost-raft"
version = "0.4.0"
authors = ["Md Sarowar Alam <sarowar.cse@gmail.com>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
readme = "README.md"
repository = "https://github.com/eipi1/almost-raft"
description = """
An implementation of Raft leader election
"""
categories = ["algorithms", "network-programming"]
keywords = ["cluster", "distributed-system", "raft", "consensus"]

[dependencies.rand]
version = "0.9"

[dependencies.tokio]
version = "1.43"
features = ["time", "sync", "test-util", "macros", "rt"]

[dependencies.tokio-stream]
version = "0.1"

[dependencies.futures-util]
version = "0.3"

[dependencies.async-trait]
version = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.log]
version = "0.4"

[dev-dependencies.tracing-subscriber]
version = "0.2"

[dev-dependencies.uuid]
version = "0.8"
features = ["v4"]
